# banana-quest

./: .gitignore  README.md  gemini_example.py  nano-banana-docs.md  plan.md  pyproject.toml
backend/: main.py
frontend/: index.html
